fixed delete button container for spacing

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ th, td {
 
 .delete-box {
   text-align: center;
+  width: 154.95px;
 }
 
 .delete-button {
